namespaces-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: development

---

apiVersion: v1
kind: Namespace
metadata:
  name: production
