zipkin-service-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin-service
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin-service
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 300
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: zipkin-service
    spec:
      containers:
        - name: zipkin-service-container
          image: openzipkin/zipkin:2
          ports:
            - containerPort: 9144
          imagePullPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: zipkin-service
  namespace: development
spec:
  selector:
    app: zipkin-service
  type: NodePort
  ports:
    - port: 9411
      targetPort: 9411
