ingress-applications-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-applications
  namespace: drone-transport
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
#    - host: gateway.local.online-shop.com
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: gateway-service
#                port:
#                  number: 8762
#    - host: admin.local.online-shop.com
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: admin-service
#                port:
#                  number: 5050
#    - host: grafana.local.online-shop.com
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: kube-prometheus-stack-grafana
#                port:
#                  number: 80
#    - host: prometheus.local.online-shop.com
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: kube-prometheus-stack-prometheus
#                port:
#                  number: 9090
#    - host: zipkin.local.online-shop.com
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: zipkin-service
#                port:
#                  number: 9411
